Created experince list

--- a/style/main.scss
+++ b/style/main.scss
@@ -9,4 +9,5 @@
 @import "./sections/contact";
 @import "./sections/hero";
 @import "./sections/projects";
-@import "./sections/modal"
+@import "./sections/modal";
+@import "./sections/experince";
