80% done with "Where I've worked" section.

--- a/style/sections/_projects.scss
+++ b/style/sections/_projects.scss
@@ -43,6 +43,9 @@
 
       &-info {
         margin-bottom: 1.5rem;
+        .b {
+          color: $secondary-color
+        }
       }
 
       &-btns {
