--- a/style/sections/_experince.scss
+++ b/style/sections/_experince.scss
@@ -15,6 +15,14 @@
     flex-direction: row;
 
     @include respond(tab-land) {
+      flex-direction: row;
+    }
+
+    @include respond(tab-port) {
+      flex-direction: column;
+    }
+
+    @include respond(phone) {
       flex-direction: column;
     }
 
@@ -45,6 +53,52 @@
           }
         }
       }
+
+      @include respond(tab-port) {
+        width: 100%;
+        border-right: none;
+        border-bottom: 3px solid $dark-grey;
+        margin-right: 0;
+        margin-bottom: 2rem;
+        padding-bottom: 1rem;
+
+        ul {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          flex-wrap: wrap;
+
+          .experience-item {
+            padding: 0.5rem;
+            font-size: $default-font-size;
+            text-align: center;
+            flex: 1;
+          }
+        }
+      }
+
+      @include respond(phone) {
+        width: 100%;
+        border-right: none;
+        border-bottom: 3px solid $dark-grey;
+        margin-right: 0;
+        margin-bottom: 2rem;
+        padding-bottom: 1rem;
+
+        ul {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          flex-wrap: wrap;
+
+          .experience-item {
+            padding: 0.5rem;
+            font-size: $default-font-size;
+            text-align: center;
+            flex: 1;
+          }
+        }
+      }
     }
 
     #experience-details {
@@ -53,30 +107,72 @@
 
       .experience-detail {
         display: none;
+        text-align: left;
 
         &.active {
           display: block;
         }
 
         h3 {
-          font-size: $mid-font-size;
+          font-size: 2rem;
           margin-bottom: 1rem;
           color: $dark-blue-text;
+
+          @include respond(tab-port) {
+            font-size: 1.8rem;
+          }
+
+          @include respond(phone) {
+            font-size: $default-font-size;
+          }
         }
 
         p {
           font-size: $default-font-size;
           margin-bottom: 1.5rem;
+          text-align: left;
+
+          @include respond(tab-port) {
+            font-size: 1rem;
+          }
+
+          @include respond(phone) {
+            font-size: 0.8rem;
+          }
         }
 
         ul {
-          list-style: disc;
+          list-style: square;
           padding-left: 1.5rem;
+          text-align: left;
 
           li {
             margin-bottom: 0.8rem;
+            text-align: left;
+
+            @include respond(tab-port) {
+              font-size: 1rem;
+            }
+
+            @include respond(phone) {
+              font-size: 0.8rem;
+            }
           }
         }
+      }
+
+      @include respond(tab-port) {
+        width: 100%;
+        padding-left: 0;
+        padding-top: 0;
+        border-top: none; /* Removed border to ensure only one border */
+      }
+
+      @include respond(phone) {
+        width: 100%;
+        padding-left: 0;
+        padding-top: 0;
+        border-top: none; /* Removed border to ensure only one border */
       }
     }
   }
