--- a/style/sections/_experince.scss
+++ b/style/sections/_experince.scss
@@ -1,8 +1,25 @@
 #experience {
-  padding: 5rem 2rem;
+  padding: 5rem 2rem 10rem 2rem;
   background-color: $light-white;
   color: $dark-grey;
   font-family: $font-family;
+  //margin-bottom: 5rem; 
+
+  // @include respond(tab-land) {
+  //   -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
+  //   clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
+  //   padding: 15rem 0 10rem 0;
+  //   margin-top: -15rem;
+  //   margin-bottom: -1px;
+  // }
+
+  // @include respond(big-desktop) {
+  //   -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
+  //   clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
+  //   padding: 15rem 0 10rem 0;
+  //   margin-top: -15rem;
+  //   margin-bottom: -1px;
+  // }
 
   .section-title {
     font-size: $big-font-size;
@@ -125,6 +142,40 @@
           @include respond(phone) {
             font-size: $default-font-size;
           }
+
+          // New styles for dynamic underline on company name
+          .company-name {
+            color: $dark-blue-text;
+            font-size: 2rem;
+            position: relative;  // To position the underline correctly
+            display: inline-block;  // Inline element for text width
+            cursor: pointer;
+            @include respond(tab-port) {
+              font-size: 1.8rem;
+            }
+  
+            @include respond(phone) {
+              font-size: $default-font-size;
+            }
+
+            // Dynamic underline effect
+            &:after {
+              content: "";
+              position: absolute;
+              left: 0;
+              bottom: -2px;  // Position underline 2px below text
+              width: 100%;
+              height: 2px;  // Height of the underline
+              background: currentColor;  // Use the text color
+              transform: scaleX(0);  // Initially hidden
+              transform-origin: left;  // Animate from left to right
+              transition: transform 0.3s ease;  // Smooth transition
+            }
+
+            &:hover:after {
+              transform: scaleX(1);  // Full width on hover
+            }
+          }
         }
 
         p {
@@ -165,14 +216,14 @@
         width: 100%;
         padding-left: 0;
         padding-top: 0;
-        border-top: none; /* Removed border to ensure only one border */
+        border-top: none;
       }
 
       @include respond(phone) {
         width: 100%;
         padding-left: 0;
         padding-top: 0;
-        border-top: none; /* Removed border to ensure only one border */
+        border-top: none;
       }
     }
   }
