--- a/style/sections/_experince.scss
+++ b/style/sections/_experince.scss
@@ -194,12 +194,14 @@
 
         ul {
           list-style: square;
+          
           padding-left: 1.5rem;
           text-align: left;
 
           li {
             margin-bottom: 0.8rem;
             text-align: left;
+            font-size: 1.5rem
 
             @include respond(tab-port) {
               font-size: 1rem;
