--- a/style/main.scss
+++ b/style/main.scss
@@ -10,4 +10,4 @@
 @import "./sections/hero";
 @import "./sections/projects";
 @import "./sections/modal";
-@import "./sections/experince";
+@import "./sections/experience";
